--- a/pg-admin-secrets-template.yml
+++ b/pg-admin-secrets-template.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-secrets
+  name: pg-admin-secrets
 type: Opaque
 # type: kubernetes.io/service-account-token
 data:
-  DB_USER: USERBASE64
+  PG_USER_EMAIL: EMAILBASE64
   DB_PASSWORD: PASSWORDBASE64
